// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfiniteHits renders markup with state 1`] = `
<ng-ais-infinite-results
  cx={[Function Function]}
  searchInstance={[Function NgAisInstance]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  template="undefined"
  updateState={[Function Function]}
>
  
      <div
    class="ais-InfiniteHits"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-InfiniteHits-header ais-he"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-InfiniteHits-body ais-body"
    >
      
          
      
      
  
          
      
          
      
      <div>
        
            
        <ul
          class="ais-InfiniteHits-list"
        >
          
              
          
          <li
            class="ais-InfiniteHits-item"
          >
            
                
            <ng-ais-highlight
              attributename="name"
              ng-reflect-attribute-name="name"
              ng-reflect-hit="[object Object]"
            >
              <span>
                foo
              </span>
            </ng-ais-highlight>
            
              
          </li>
          <li
            class="ais-InfiniteHits-item"
          >
            
                
            <ng-ais-highlight
              attributename="name"
              ng-reflect-attribute-name="name"
              ng-reflect-hit="[object Object]"
            >
              <span>
                bar
              </span>
            </ng-ais-highlight>
            
              
          </li>
          <li
            class="ais-InfiniteHits-item"
          >
            
                
            <ng-ais-highlight
              attributename="name"
              ng-reflect-attribute-name="name"
              ng-reflect-hit="[object Object]"
            >
              <span>
                foobar
              </span>
            </ng-ais-highlight>
            
              
          </li>
          <li
            class="ais-InfiniteHits-item"
          >
            
                
            <ng-ais-highlight
              attributename="name"
              ng-reflect-attribute-name="name"
              ng-reflect-hit="[object Object]"
            >
              <span>
                barfoo
              </span>
            </ng-ais-highlight>
            
              
          </li>
          
            
        </ul>
        
          
      </div>
      
  
          
      <button
        class="ais-InfiniteHits-showMore"
      >
        
            Show more results
          
      </button>
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-InfiniteHits-footer ais-fo"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-infinite-results>
`;

exports[`InfiniteHits renders markup without state 1`] = `
<ng-ais-infinite-results
  cx={[Function Function]}
  searchInstance={[Function NgAisInstance]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  template="undefined"
  updateState={[Function Function]}
>
  
      <div
    class="ais-InfiniteHits"
  >
    
        
    <ng-ais-header
      ng-reflect-class-name="ais-InfiniteHits-header ais-he"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-InfiniteHits-body ais-body"
    >
      
          
      
      
  
          
      
          
      
      <div>
        
            
        <ul
          class="ais-InfiniteHits-list"
        >
          
              
          
          
            
        </ul>
        
          
      </div>
      
  
          
      <button
        class="ais-InfiniteHits-showMore"
      >
        
            Show more results
          
      </button>
      
        
    </div>
    
  
        
    <ng-ais-footer
      ng-reflect-class-name="ais-InfiniteHits-footer ais-fo"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-infinite-results>
`;
